fixed missing padding for advanced search form
git-svn-id: https://svn.syslab.com/svn/syslabcom/recensio.theme/trunk@6780 51ee9ba4-e84d-4896-84de-354f1821c169

--- a/recensio/theme/skins/recensio_theme/screen.css
+++ b/recensio/theme/skins/recensio_theme/screen.css
@@ -506,6 +506,7 @@ div.errors tr.bad {
 .collapsible .collapser.collapsed {
 /*    padding-right: 14px;*/
     background: url('arrowRight.png') center left no-repeat;
+    padding-left: 10px;
 } 
 
 .collapsible .collapser.expanded {
